--- a/scss/component/_grid.scss
+++ b/scss/component/_grid.scss
@@ -1,16 +1,10 @@
 // Container widths
 // Set the container width, and override it for fixed navbars in media queries.
-@if $enable-grid-classes {
-    .container {
-        @include make-container();
-        @include make-container-max-widths();
-    }
-}
 
-// Fluid container
-// Utilizes the mixin meant for fixed width containers, but with
-// 100% width for fluid, full width layouts.
 @if $enable-grid-classes {
+    // Single container class with breakpoint max-widths
+    .container,
+    // Fluid container - 100% wide on all breakpoints
     .container-fluid {
         @include make-container();
     }
