Update SVG sizing to use proper height/width attributes

--- a/site/_includes/4.0/partials/footer.html
+++ b/site/_includes/4.0/partials/footer.html
@@ -30,7 +30,7 @@
           </div>
         </div>
         <div class="col-md-auto">
-          {% include "./icons/cast-logo.svg", width: "9.645rem", height: "3rem" %}
+          {% include "./icons/cast-logo.svg",  class: "cf-footer-cast-logo" %}
         </div>
       </div>
     </div>
