--- a/site/_includes/4.0/partials/settings_menu.html
+++ b/site/_includes/4.0/partials/settings_menu.html
@@ -1,6 +1,6 @@
 <div class="dropdown">
   <a href="#" role="button" class="nav-link px-0_5" aria-label="Settings" data-cfw="dropdown">
-    {% include "./icons/cog.svg", width: "1rem", height: "1rem" %}
+    {% include "./icons/cog.svg", width: "16", height: "16", class: "cf-nav-img" %}
   </a>
   <ul class="dropdown-menu dropreverse position-absolute">
     <li class="dropdown-header">Direction</li>
