--- a/site/_includes/4.0/partials/topnav.html
+++ b/site/_includes/4.0/partials/topnav.html
@@ -37,12 +37,12 @@
     {%- endif -%}
     <li class="nav-item">
       <a href="{{ site.twitter.home }}" class="nav-link px-0_5" aria-label="Twitter">
-        {% include "./icons/twitter.svg", width: "1rem", height: "1rem" %}
+        {% include "./icons/twitter.svg", width: "16", height: "16", class: "cf-nav-img" %}
       </a>
     </li>
     <li class="nav-item">
       <a href="{{ site.repo }}" class="nav-link px-0_5" aria-label="Github">
-        {% include "./icons/github.svg", width: "1rem", height: "1rem" %}
+        {% include "./icons/github.svg", width: "16", height: "16", class: "cf-nav-img" %}
       </a>
     </li>
     <li class="nav-item">
