--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -370,6 +370,11 @@ select {
     text-transform: none; // Remove the inheritance of text transform in Firefox
 }
 
+// Set the cursor for non-`<button>` buttons
+[role="button"] {
+    cursor: pointer;
+}
+
 // Remove the inheritance of word-wrap in Safari.
 //
 // Details at https://github.com/twbs/bootstrap/issues/24990
@@ -380,11 +385,17 @@ select {
 // 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
 //    controls in Android 4.
 // 2. Correct the inability to style clickable types in iOS and Safari.
+// 3. Opinionated: add "hand" cursor to non-disabled button elements.
+
 button,
 [type="button"], // 1
 [type="reset"],
 [type="submit"] {
     -webkit-appearance: button; // 2
+
+    &:not(:disabled) {
+        cursor: pointer; // 3
+    }
 }
 
 // Remove inner border and padding from Firefox, but don't restore the outline like Normalize.
