--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -305,12 +305,15 @@ caption {
     text-align: left;
 }
 
+
+// 1. Removes font-weight bold by inheriting
+// 2. Matches default `<td>` alignment by inheriting `text-align`.
+// 3. Fix alignment for Safari
 th {
-    // Matches default `<td>` alignment by inheriting `text-align`.
-    // 1. Fix alignment for Safari
-    text-align: inherit;
+    font-weight: $table-th-font-weight; // 1
+    text-align: inherit; // 2
     // stylelint-disable-next-line declaration-block-no-duplicate-properties
-    text-align: -webkit-match-parent; // 1
+    text-align: -webkit-match-parent; // 3
 }
 
 // Allow border color to inherit all the way down.
