--- a/site/assets/4.0/css/docs-rtl.css
+++ b/site/assets/4.0/css/docs-rtl.css
@@ -48,6 +48,11 @@
   line-height: .75;
 }
 
+.cf-nav-img {
+  width: 1rem;
+  height: 1rem;
+}
+
 .cf-footer {
   font-size: 0.875rem;
   color: #000;
@@ -61,6 +66,11 @@
 
 .cf-footer a:hover, .cf-footer a:focus {
   color: #002f80;
+}
+
+.cf-footer-cast-logo {
+  width: 9.645rem;
+  height: 3rem;
 }
 
 .toplink a {
