--- a/site/_includes/4.0/partials/body.html
+++ b/site/_includes/4.0/partials/body.html
@@ -2,13 +2,11 @@
 
 <div class="container-fluid">
   <div class="row">
-    <!-- <div class="col-md-3 col-lg-2 cf-sidebar print-none"> -->
     <div class="col-md-3 col-xl-2 cf-sidebar print-none">
       {% include sidebar %}
     </div>
 
-    <!-- <main class="col-md-9 col-lg-10 "> -->
-    <main class="col ">
+    <main class="col-md-9 col-xl-10 cf-main">
         <div class="cf-toc-align">
             <div class="cf-content-lead">
                 <h1 class="cf-title" id="content">{{ title }}{%if subtitle %} <small class="text-muted">{{ subtitle }}</small>{% endif %}</h1>
