--- a/site/assets/4.0/scss/_sidebar.scss
+++ b/site/assets/4.0/scss/_sidebar.scss
@@ -20,14 +20,11 @@
             max-height: calc(100vh - 3.375rem);
         }
     }
-
-    @include media-breakpoint-up(lg) {
-        max-width: 20.75%;
-    }
 }
 
 .cf-sidebar-header {
     margin-bottom: .125rem;
+    margin-left: 0;
     white-space: nowrap;
 }
 
@@ -54,11 +51,16 @@
         }
     }
 
-    a {
+    .nav-link {
         display: block;
+        width: 100%;
         padding: 0;
         color: $uibase-700;
+        text-align: left;
         text-decoration: none;
+        background-color: transparent;
+        border-width: 0;
+        @include border-radius(0);
 
         .nav-link-inner {
             display: inline-block;
@@ -80,12 +82,6 @@
                 @include border-radius($border-radius);
             }
         }
-
-        &.disabled {
-            color: $navbar-light-disabled-color;
-            background-color: transparent;
-            border-color: transparent;
-        }
     }
 
     .has-children {
@@ -102,7 +98,7 @@
                 @include caret-down($caret-border-width);
             }
         }
-        .nav-link {
+        .nav-link:not(.cf-sidebar-header) {
             margin-left: 1rem;
         }
     }
