--- a/scss/core/_buttons.scss
+++ b/scss/core/_buttons.scss
@@ -104,7 +104,7 @@
 
     // Default color
     @if $enable-btn-default {
-        @include button-variant(".btn", $btn-default-color, $btn-default-bg, $btn-default-border-color, $btn-default-focus-box-shadow-color, $btn-default-hover-color, $btn-default-hover-bg, $btn-default-hover-border-color, $btn-default-active-color, $btn-default-active-bg, $btn-default-active-border-color);
+        @include button-variant(".btn", $btn-default-color, $btn-default-bg, $btn-default-border-color, $btn-default-focus-box-shadow-color, $btn-default-hover-color, $btn-default-hover-bg, $btn-default-hover-border-color, $btn-default-active-color, $btn-default-active-bg, $btn-default-active-border-color, $btn-default-disabled-color, $btn-default-disabled-bg, $btn-default-disabled-border-color);
     }
 
     // Theme generation
@@ -124,7 +124,7 @@
 
     // Outline variant - remove all backgrounds
     @if $enable-btn-outline {
-        @include button-variant(".btn-outline", $btn-default-color, $btn-outline-bg, $btn-default-border-color, $btn-default-focus-box-shadow-color, $btn-default-hover-color, $btn-default-hover-bg, $btn-default-hover-border-color, $btn-default-active-color, $btn-default-active-bg, $btn-default-active-border-color);
+        @include button-variant(".btn-outline", $btn-default-color, $btn-outline-bg, $btn-default-border-color, $btn-default-focus-box-shadow-color, $btn-default-hover-color, $btn-default-hover-bg, $btn-default-hover-border-color, $btn-default-active-color, $btn-default-active-bg, $btn-default-active-border-color, $btn-default-disabled-color, $btn-outline-bg, $btn-default-disabled-border-color);
     }
 
     // Outline theme generation
