--- a/scss/component/_nav.scss
+++ b/scss/component/_nav.scss
@@ -13,10 +13,14 @@
     .nav-link {
         display: block;
         padding: $nav-link-padding-y $nav-link-padding-x;
+        @include font-size($nav-link-font-size);
+        font-weight: $nav-link-font-weight;
+        color: $nav-link-color;
         text-decoration: $nav-link-decoration;
         @include transition($nav-link-transition);
 
         @include hover-focus() {
+            color: $nav-link-hover-color;
             text-decoration: $nav-link-hover-decoration;
         }
 
