--- a/site/assets/4.0/scss/_skiplink.scss
+++ b/site/assets/4.0/scss/_skiplink.scss
@@ -9,7 +9,7 @@
     color: $white;
     text-align: center;
     text-decoration: none;
-    background-color: $docs-primary;
+    background-color: #116fa9;
     border: 2px solid $white;
     outline: 0;
     transform: translateX(-50%);
