--- a/site/_includes/4.0/partials/sidebar_nav.html
+++ b/site/_includes/4.0/partials/sidebar_nav.html
@@ -5,7 +5,7 @@
 {%- endif %}
 
 {%- assign page_slug = page.url | pathLast -%}
-<button class="btn btn-default mb-0_5 d-md-none" aria-label="Toggle page navigation" data-cfw="collapse" data-cfw-collapse-target="#cf-links-nav">
+<button class="btn btn-default my-0_5 d-md-none" aria-label="Toggle page navigation" data-cfw="collapse" data-cfw-collapse-target="#cf-links-nav">
   <span aria-hidden="true">Pages <span class="caret" ></span></span>
 </button>
 <nav id="cf-links-nav" class="cf-links collapse" aria-label="Page">
