--- a/site/assets/4.0/scss/_home.scss
+++ b/site/assets/4.0/scss/_home.scss
@@ -84,7 +84,7 @@
     height: 1.25em;
     line-height: 1;
     vertical-align: text-bottom;
-    @include border-radius($border-radius);
+    @include border-radius(.5rem);
     box-shadow: 2px 2px .2rem rgba(0, 0, 0, .35);
 
     .fab,
